Commit package.json and other config files
(For some reason they were put to gitignore before...)

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -4,8 +4,14 @@
     "module": "ESNext",
     "target": "ES6",
     "outDir": "dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["./"]
+  "include": ["./src/**/*.ts"],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
