--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "module": "ESNext",
     "target": "ES6",
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true,
@@ -11,7 +11,6 @@
   },
   "include": ["./src/**/*.ts"],
   "exclude": [
-    "node_modules",
-    "dist"
+    "node_modules"
   ]
 }
