--- a/functions/package.json
+++ b/functions/package.json
@@ -18,14 +18,17 @@
     "@myproject/shared": "file:../shared",
     "@types/firebase": "^2.4.32",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "firebase": "^11.6.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
+    "firebase-functions": "^6.3.2",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
