--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "serve:local": "ts-node serveLocal.ts"
   },
   "engines": {
     "node": "22"
@@ -23,8 +24,7 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "ts-node": "^10.9.2"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,11 +35,13 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
     "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
